Added municipalityId and updated the messaging integration (#77)